objects/AWSConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>AWSAccessKey__c</fullName>
        <label>AWSAccessKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWSSecretKey__c</fullName>
        <label>AWSSecretKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BucketRegion__c</fullName>
        <label>BucketRegion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>S3File Credential</label>
</CustomObject>